--- a/angular/src/app/admin/importlog/importlog.component.html
+++ b/angular/src/app/admin/importlog/importlog.component.html
@@ -16,7 +16,7 @@
         <div [class]="containerClass + ' kt-grid__item kt-grid__item--fluid'">
             <div class="kt-portlet kt-portlet--mobile">
                 <div class="kt-portlet__body">
-                    <form class="kt-form" autocomplete="new-password">
+                    <form class="kt-form" autocomplete="off">
                         <div>
                         </div>
                     </form>
