--- a/angular/src/app/admin/tenants/tenants.component.html
+++ b/angular/src/app/admin/tenants/tenants.component.html
@@ -23,7 +23,7 @@
             <div class="kt-portlet">
                 <div class="kt-portlet__body">
                     <div class="kt-form">
-                        <form (submit)="getTenants()" autocomplete="new-password">
+                        <form (submit)="getTenants()" autocomplete="off">
                             <div class="form-body">
 
                                 <div class="row mb-4">
