--- a/angular/src/app/admin/users/users.component.html
+++ b/angular/src/app/admin/users/users.component.html
@@ -289,7 +289,7 @@
     <div [class]="containerClass + ' kt-grid__item kt-grid__item--fluid'">
         <div class="kt-portlet kt-portlet--mobile">
             <div class="kt-portlet__body">
-                <form class="kt-form" autocomplete="new-password">
+                <form class="kt-form" autocomplete="off">
                     <div>
                         <div class="row d-flex justify-content-end mb-3">
                             <div class=" kt-margin-b-20-tablet-and-mobile">
