--- a/angular/src/app/admin/demo-ui-components/demo-ui-date-time.component.html
+++ b/angular/src/app/admin/demo-ui-components/demo-ui-date-time.component.html
@@ -14,6 +14,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8">
                     <input id="SampleDatePicker"
                            type="text"
+                           autocomplete="off"
                            #SampleDatePicker
                            name="SampleDatePicker"
                            class="form-control"
@@ -32,6 +33,7 @@
                 <div class="col-lg-10 col-md-9 col-sm-8">
                     <input name="SampleDateRangePicker"
                            type="text"
+                           autocomplete="off"
                            class="form-control"
                            id="SampleDateRangePicker"
                            bsDaterangepicker
