--- a/angular/src/app/admin/organization-units/add-member-modal.component.html
+++ b/angular/src/app/admin/organization-units/add-member-modal.component.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="modal-body">
-                <form novalidate (ngSubmit)="refreshTable()" autocomplete="new-password">
+                <form novalidate (ngSubmit)="refreshTable()" autocomplete="off">
                     <div class="input-group mb-2">
                         <input autoFocus [(ngModel)]="filterText" name="filterText" class="form-control" placeholder="{{'SearchWithThreeDot' | localize}}" type="text">
                         <span class="input-group-btn">
