--- a/angular/src/app/admin/roles/create-or-edit-role-modal.component.html
+++ b/angular/src/app/admin/roles/create-or-edit-role-modal.component.html
@@ -2,7 +2,7 @@
      aria-hidden="true" [config]="{backdrop: 'static', keyboard: !saving}">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <form *ngIf="active" #roleForm="ngForm" novalidate (ngSubmit)="save()" autocomplete="new-password">
+            <form *ngIf="active" #roleForm="ngForm" novalidate (ngSubmit)="save()" autocomplete="off">
                 <div class="modal-header">
                     <h4 class="modal-title">
                         <span *ngIf="role.id">{{"EditRole" | localize}}: {{role.displayName}}</span>
@@ -17,7 +17,7 @@
                         <tab heading="{{'RoleName' | localize}}">
                             <div class="form-group">
                                 <label>{{"RoleName" | localize}} *</label>
-                                <input id="RoleDisplayName" #roleNameInput="ngModel" class="form-control" type="text" name="DisplayName" [(ngModel)]="role.displayName" required maxlength="64">
+                                <input id="RoleDisplayName" #roleNameInput="ngModel" class="form-control" type="text" name="DisplayName" autocomplete="off" [(ngModel)]="role.displayName" required maxlength="64">
                                 <validation-messages [formCtrl]="roleNameInput"></validation-messages>
                             </div>
 
